--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,16 @@ a{
     font-size: 26px;
     color: inherit;
 }
-a.logo{
+.font-accent{
     font-size: 46px;
     font-family: 'Rubik Gemstones', cursive;
+    background-color: yellow;
+}
+a.logo{
     text-transform: uppercase;
+    text-decoration: none;
 }
 h1{
-    font-size: 46px;
-    font-family: 'Rubik Gemstones', cursive;
     text-align: center;
     text-transform: capitalize;
 }
@@ -33,9 +35,14 @@ p{
     font-style: italic;
     font-weight: 700;
     font-family: 'Lora', serif;
-    line-height: 1.5em;
+    line-height: 1.3em;
+    text-align: justify;
+    text-indent: 3em;
 } 
 .btn{
     text-decoration: none;
-    border: red;
+    /* border: red;
+    border-style: solid;
+    border-width: 5px; */
+    border: 5px solid red;
 }
