--- a/assets/css/style-contacts.css
+++ b/assets/css/style-contacts.css
@@ -17,14 +17,17 @@ header{
     border-bottom: double;
     padding-bottom: 10px;
 }
-.experience{
+.description{
     font-size: 30px;
     padding-bottom: 10px;
     border-bottom: 1px solid #000;
 }
-.title-skills{
+.title{
     font-size: 30px;
     border-top: double;
     border-bottom: 1px solid #000;
     padding: 10px 0;
+}
+.lead{
+    font-size: 15px;
 }
