--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,60 +1,85 @@
-table{
-    width: 80%;
-    margin: auto;
-    border-collapse: collapse;
-    text-align: center;
+:root{
+    font-size: 24px;
 }
-th, td{
-    padding: 1em;
+*{
+    box-sizing: border-box;
 }
-thead{
-    color: white;
-}
-thead>tr>th:first-child{
-    border-radius: 15px 0 0 0;
-    background-color: #7987ac;
-}
-thead>tr>th:nth-child(2){
-    background-color: #4f628d;
-}
-thead>tr>th:nth-child(3){
-    background-color: #2f4173;
-}
-thead>tr>th:nth-child(4){
-    background-color: #162954;
-}
-thead>tr>th:last-child{
-    border-radius: 0 15px 0 0;
-    background-color: #07153a;
-}
-thead>tr>th>p:first-child{
+body{
     margin: 0;
 }
-tbody>tr:nth-child(odd)>td:nth-child(odd),
-tfoot>tr:nth-child(odd)>th:nth-child(odd)
-{
-    background-color: #dbdbdb; 
+a{
+    color: inherit;
+    text-decoration: none;
 }
-tbody>tr:nth-child(even)>td:nth-child(odd){
-    background-color: #ececec;
+
+img{
+  width: 100%;
 }
-tbody>tr:nth-child(even)>td:nth-child(even){
-    background-color: #f3f3f3; 
+ul {
+  list-style: none;
+  padding-left: 0;
 }
-tbody>tr:nth-child(odd)>td:nth-child(even){
-    background-color: #e7e7e7;
+main {
+  margin: 5vmin;
 }
-tfoot>tr>th:nth-child(2),
-tfoot>tr>th:nth-child(4){
-    background-color: #e7e7e7;
+
+.slider{
+  position: relative;
 }
-tfoot>tr>th:first-child{
-    border-radius: 0 0 0 15px;
+.slider::after,
+.slider::before{
+  content: url(./../icons/arrow-left-circle.svg);
+  display: block;
+  min-width: 15px;
+  width: 5%;
+  position: absolute;
+  top:47.5%;
+  opacity: 0.1;
 }
-tfoot>tr>th:last-child{
-    border-radius: 0 0 15px 0;
+.slider::after{
+  right: -10%;
+  /* transform: rotate(180deg); */
+  transform: scaleX(-1);
+  transition: opacity 1s, right 2s;
 }
-button{
-    padding: 5px 20px;
-    font-size: 20px;
+.slider::before{
+    left: -10%;
+    transition: opacity 1s, left 2s;
+}
+.slider:hover::after,
+.slider:hover::before{
+  opacity: 0.5;
+}
+.slider:hover::before{
+    left: 0;
+}
+.slider:hover::after{
+    right: 0;
+}
+
+
+
+.block{
+  width: 10%;
+  height: 50px;
+  margin-bottom: 5px;
+  background-color: pink;
+  transition: all 1s ;
+}
+.wrapper:hover>.block{
+  width: 100%;
+  background-color: blue;
+  /* transition: all 4s; */
+}
+.ease{
+  transition-timing-function: ease;
+}
+.ease-in{
+  transition-timing-function: ease-in;
+}
+.ease-out{
+  transition-timing-function: ease-out;
+}
+.linear{
+  transition-timing-function: linear;
 }
